[gd_scene load_steps=13 format=2]

[ext_resource path="res://Ressources/BgTexture.png" type="Texture" id=1]
[ext_resource path="res://Elements/Rocks Of Different Species/Technology/Technology.png" type="Texture" id=2]
[ext_resource path="res://Elements/Rocks Of Different Species/Ice/Ice.png" type="Texture" id=3]
[ext_resource path="res://Elements/Rocks Of Different Species/Metal/Metal.png" type="Texture" id=4]
[ext_resource path="res://Elements/Rocks Of Different Species/Bio/Bio.png" type="Texture" id=5]
[ext_resource path="res://Elements/Rocks Of Different Species/Planet/Planets_0000_Bedrock.png" type="Texture" id=6]
[ext_resource path="res://Ressources/button2.png" type="Texture" id=7]
[ext_resource path="res://Ressources/button1.png" type="Texture" id=8]
[ext_resource path="res://Ressources/Pixel LCD-7.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Controls/Tutorial/Tutorial.gd" type="Script" id=10]
[ext_resource path="res://Ressources/Tab.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 9 )

[node name="Tutorial" type="CanvasLayer"]
offset = Vector2( -386, 0 )
transform = Transform2D( 1, 0, 0, 1, -386, 0 )
script = ExtResource( 10 )

[node name="BgTexture" type="Sprite" parent="."]
position = Vector2( 192.932, 254.407 )
scale = Vector2( 0.376821, 0.496888 )
texture = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -3.13826, -3.18665 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 32, 32, 360, 32, 360, 384, 32, 384 )

[node name="Label" type="Label" parent="." groups=[
"TutoLabel",
]]
margin_left = 36.8617
margin_top = 36.8134
margin_right = 340.862
margin_bottom = 372.813
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 2, 0, 1 )
text = "bienvenue dans le petit livre de bord.

veuillez selectionner le sujet qui vous pose probleme."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaneteLabel" type="Label" parent="." groups=[
"TutoLabel",
]]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 2, 0, 1 )
text = "PLANETE

L'element fondateur d'une civilisation.

peut supporter la vie si accompagne de nourriture et d'eau"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IceLabel" type="Label" parent="." groups=[
"TutoLabel",
]]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 2, 0, 1 )
text = "Glacier

Contient de grandes quantites d'eau.

Peut etre jete sur une planete ou laissee loin du soleil pour generer encore plus d'eau"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalLabel" type="Label" parent="." groups=[
"TutoLabel",
]]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 2, 0, 1 )
text = "Metal

Contient de grandes quantites de metal.

Peut etre jete sur une planete ou laissee proche du soleil pour generer encore plus de metal."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BioLabel" type="Label" parent="." groups=[
"TutoLabel",
]]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 2, 0, 1 )
text = "Bacteries

Amas de bacteries diverses, relativement sale.

Necessaire pour commencer le cycle de la vie."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TechnoLabel" type="Label" parent="." groups=[
"TutoLabel",
]]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 2, 0, 1 )
text = "Technologies

Petits tas de technologies en tout genre.

Permet d'aider un peu la recherche."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="TextureButton" parent="."]
margin_left = 28.8617
margin_top = 420.813
margin_right = 68.8617
margin_bottom = 460.813
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planets_0000_Bedrock" type="Sprite" parent="Planet"]
position = Vector2( 20, 19 )
scale = Vector2( 0.0485706, 0.0485706 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ice" type="TextureButton" parent="."]
margin_left = 100.862
margin_top = 420.813
margin_right = 140.862
margin_bottom = 460.813
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ice" type="Sprite" parent="Ice"]
position = Vector2( 20, 19 )
scale = Vector2( 0.0426553, 0.0426553 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bio" type="TextureButton" parent="."]
margin_left = 172.862
margin_top = 420.813
margin_right = 212.862
margin_bottom = 460.813
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bio" type="Sprite" parent="Bio"]
position = Vector2( 22, 21 )
scale = Vector2( 0.0825634, 0.0825634 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Metal" type="TextureButton" parent="."]
margin_left = 244.862
margin_top = 420.813
margin_right = 284.862
margin_bottom = 460.813
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metal" type="Sprite" parent="Metal"]
position = Vector2( 20, 22 )
scale = Vector2( 0.0399538, 0.0399538 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Technology" type="TextureButton" parent="."]
margin_left = 316.862
margin_top = 420.813
margin_right = 356.862
margin_bottom = 460.813
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Technology" type="Sprite" parent="Technology"]
position = Vector2( 20, 20 )
scale = Vector2( 0.0452869, 0.0452869 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 384, 36 )
rotation = 1.57079
scale = Vector2( 0.07093, 0.0686115 )
z_index = -1
texture = ExtResource( 11 )

[node name="ShowHide" type="Button" parent="."]
margin_left = 413.0
margin_top = 8.0
margin_right = 469.0
margin_bottom = 28.0
rect_rotation = 89.9999
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Planet" to="." method="_on_Planet_pressed"]
[connection signal="pressed" from="Ice" to="." method="_on_Ice_pressed"]
[connection signal="pressed" from="Bio" to="." method="_on_Bio_pressed"]
[connection signal="pressed" from="Metal" to="." method="_on_Metal_pressed"]
[connection signal="pressed" from="Technology" to="." method="_on_Technology_pressed"]
[connection signal="pressed" from="ShowHide" to="." method="_on_ShowHide_pressed"]
